[gd_scene load_steps=11 format=3 uid="uid://xy35ep21wxy"]

[ext_resource type="Script" path="res://BrainVisualizer/BrainVisualizer.gd" id="1_234dh"]
[ext_resource type="Resource" uid="uid://bha88u45sahwc" path="res://BrainVisualizer/Configs/feagi_default_settings.tres" id="2_iu6jq"]
[ext_resource type="Resource" uid="uid://bbmq3e8wtka4s" path="res://BrainVisualizer/Configs/endpoint_settings.tres" id="3_m3l25"]
[ext_resource type="Script" path="res://BrainVisualizer/UI/UIManager.gd" id="4_qdn3k"]
[ext_resource type="PackedScene" uid="uid://ci836c2xixpea" path="res://BrainVisualizer/UI/BrainMonitor/BrainMonitor.tscn" id="6_8wmkm"]
[ext_resource type="Shader" uid="uid://b5oarw35cybvu" path="res://BrainVisualizer/UI/sky.tres" id="7_wiv4s"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ouwte"]
shader = ExtResource("7_wiv4s")
shader_parameter/HorizonColor = Color(0, 0.098, 0.219, 1)
shader_parameter/SkyColor = Color(0, 0.223, 0.447, 1)
shader_parameter/Clamp = Vector3(0.2, 0.1, 0.5)

[sub_resource type="Sky" id="Sky_btdg3"]
sky_material = SubResource("ShaderMaterial_ouwte")

[sub_resource type="Environment" id="Environment_rks2y"]
background_mode = 2
sky = SubResource("Sky_btdg3")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rogx1"]
bg_color = Color(0.117647, 0.14902, 0.203922, 0.780392)

[node name="BrainVisualizer" type="Node"]
script = ExtResource("1_234dh")
FEAGI_configuration = ExtResource("2_iu6jq")
default_FEAGI_network_settings = ExtResource("3_m3l25")

[node name="UIManager" type="Node" parent="."]
script = ExtResource("4_qdn3k")

[node name="BrainMonitor" parent="UIManager" instance=ExtResource("6_8wmkm")]

[node name="WindowManager" type="Node" parent="UIManager"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="UIManager"]
environment = SubResource("Environment_rks2y")

[node name="VersionLabel" type="Label" parent="UIManager"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -53.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
horizontal_alignment = 2

[node name="TempLoadingScreen" type="PanelContainer" parent="UIManager"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rogx1")

[node name="VBoxContainer" type="VBoxContainer" parent="UIManager/TempLoadingScreen"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="UIManager/TempLoadingScreen/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 40
text = "Loading..."
